Fieldsets added into form

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,21 +1,21 @@
 <%= simple_form_for @event, remote: true, html: {class: 'form-horizontal'} do |f| %>
-
-  <%= f.input :title, input_html: {class: "form-control" } %> 
-  <%= f.input :start, as: :string, input_html: {class: "datepicker form-control", id: "startTime"} %> 
-  <%= f.input :end, as: :string, input_html: {class: "datepicker form-control", id: "endTime"} %> 
-  <%= f.input :color, as: :minicolors %> 
-
-
-  <% unless params[:action] == 'edit' %>
-    <div class="form-group">
-      <%= select_tag :options, options_for_select([['Chose Type',0],['Custom',1],['Training',2],['Transfer', 3],['Visit',4]], 0), class: 'form-control'  %> <br /> 
-    </div>
-  <% end %> 
-
-  <%= render "custom_events", event: f %>
-  <%= render "training", event: f %>
-  <%= render "transfer", event: f %>
-  <%= render "visit", event: f %>
+ 
+  <fieldset id="core-event">
+    <%= f.input :title, input_html: {class: "form-control" } %> 
+    <%= f.input :start, as: :string, input_html: {class: "datepicker form-control", id: "startTime"} %> 
+    <%= f.input :end, as: :string, input_html: {class: "datepicker form-control", id: "endTime"} %> 
+    <%= f.input :color, as: :minicolors %> 
+    <% unless params[:action] == 'edit' %>
+      <div class="form-group">
+        <%= select_tag :options, options_for_select([['Chose Type',0],['Custom',1],['Training',2],['Transfer', 3],['Visit',4]], 0), class: 'form-control'  %> <br /> 
+      </div>
+    <% end %> 
+  </fieldset>
+  
+  <fieldset id="custom-event"> <%= render "custom_events", event: f %> </fieldset>
+  <fieldset id="training"> <%= render "training", event: f %> </fieldset>
+  <fieldset id="transfer"> <%= render "transfer", event: f %> </fieldset>
+  <fieldset id="visit"> <%= render "visit", event: f %> </fieldset>
 
   <%= f.button :submit %> 
 
@@ -26,24 +26,24 @@
 
 <% end %> 
 <script>
-$('#event_color').minicolors({
-  theme: 'bootstrap'
-});
 
-jQuery.validator.addMethod('optionsCheck', function(value){
-  return (value != '0');
-}, 'event type required');
+  $('#event_color').minicolors({
+    theme: 'bootstrap'
+  });
 
-$("#new_event").validate({
-  rules: {
-    options: { optionsCheck: true }
-  },
-  highlight: function(element, errorClass) {
-    $(element).css({"border": "red 1px solid", "box-shadow": "0 0 7px rgba(255, 0, 0, 0.6)"});
-  },
-  unhighlight: function(element, errorClass, validClass) {
-    $(element).css({"border": "#ccc 1px solid", "box-shadow": "none"});
-  }
-});
+  jQuery.validator.addMethod('optionsCheck', function(value){
+    return (value != '0');
+  }, 'event type required');
 
+  $("#new_event").validate({
+    rules: {
+      options: { optionsCheck: true }
+    },
+    highlight: function(element, errorClass) {
+      $(element).css({"border": "red 1px solid", "box-shadow": "0 0 7px rgba(255, 0, 0, 0.6)"});
+    },
+    unhighlight: function(element, errorClass, validClass) {
+      $(element).css({"border": "#ccc 1px solid", "box-shadow": "none"});
+    }
+  });
 </script>
