Js methods added to events from script. First try of implementation bootstrap tab wizard

--- a/app/assets/stylesheets/events.sass
+++ b/app/assets/stylesheets/events.sass
@@ -22,3 +22,18 @@ label.error
 
 .validate-group-error-placement
   height: 15px
+
+.disabledTab
+  pointer-events: none
+
+#event-submit
+  float: right
+  display: none
+  position: relative
+  top: -25px
+
+.next-step
+  float: right
+
+.closeNewEvent.btn.btn-default
+  margin-top: 25px
