Rearangment of event form

--- a/app/assets/stylesheets/events.sass
+++ b/app/assets/stylesheets/events.sass
@@ -6,12 +6,15 @@
   margin-left: -15px
 
 .modal-body
-  padding: 30px
+  padding: 40px
 
-.minicolors-input
-  padding-left: 0 !important
-  color: white
-  width: 4%
+#core-event
+  .minicolors-input
+    padding-left: 0 !important
+    color: white
+  .from-horizontal, .form-group
+    margin-left: -10px 
+    margin-right: -10px
 
 input.error, textarea.error
   border: solid 1px red
