Validation added to trainig, custom. Basic Styles for error msg's added. Next rest of validation and edit form. Remove H tags in tabs

--- a/app/assets/stylesheets/events.sass
+++ b/app/assets/stylesheets/events.sass
@@ -15,6 +15,14 @@
   .from-horizontal, .form-group
     margin-left: -10px 
     margin-right: -10px
+  .form-group
+    margin-bottom: 4px
+  .form-control
+    border-radius: 3px
+    font-size: 13px
+  .tab-content, .nav-tabs
+    margin-left: -9px
+    margin-right: -9px
 
 input.error, textarea.error
   border: solid 1px red
@@ -33,7 +41,7 @@ label.error
   float: right
   display: none
   position: relative
-  top: -25px
+  top: -34px
 
 .next-step
   float: right
